--- a/header css.css
+++ b/header css.css
@@ -9,7 +9,7 @@ header{
 .search-nav-bar{
     display: flex;
     align-items: center;
-    margin: 10px 30px 0px 0px ;
+    margin: 15px 30px 0px 0px ;
     height:40px;
     /* background-color: green; */
 }
@@ -74,6 +74,9 @@ header{
     /* justify-content: space-evenly; */
     margin-top: 20px; 
     flex-grow: 1;
+}
+.main-nav-bar>h1{
+    margin-top: 15px;
 }
 .main-nav-bar-links a{
     text-decoration: none;
