--- a/header css.css
+++ b/header css.css
@@ -1,94 +1,72 @@
 /* 主選單 */
-header{
+.main-nav-bar-background{
     width: 100%;
-    background: linear-gradient(rgba(0,0,0,0.3),transparent); 
-    height:100px;
-    position: absolute;
+    background: linear-gradient(rgba(256,256,256,1),transparent);
     z-index: 1;
 }
-.search-nav-bar{
+.main-nav-bar{
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    margin: 15px 30px 0px 0px ;
-    height:40px;
-    /* background-color: green; */
 }
-.member .log-in{
-    color:#fff;
+.main-nav-bar-links a{
+    font-size: 20px;
+    margin: 0 20px;
     text-decoration: none;
-    margin: 0 10px;
+    font-weight: bold;
+    color: #000;
 }
-.member .log-in:hover{
-    text-decoration: 2px #fff underline;
-    text-underline-offset: 5px;
+.main-nav-bar-links a:hover{
+    color:#cc9966;
+    text-shadow: 1px 1px 5px rgba(202,136,69,.1);
 }
-.sign-up{
-    background-color: #ff3399;
-    color: #fff;
-    text-decoration: none;
-    padding: 5px;
-    border-radius: 10%;
+.logo{
+    width:10%;
+    margin: 10px 0 0 10px;
 }
-.search{
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 1px 1px 5px white;
-    margin-right: 10px;
-    flex-grow:1;
-}
-.search input{
-    border-radius: 10px;
-    border: none;
-    width: 200px;
-    /* height: 20px; */
-    outline: none;
-    font-size: 18px;
-    margin-left: 5px;
+.logo img{
+    width: 100%;
+    vertical-align: middle;
 }
 .search button{
-    border-radius: 10px;
-    width: 30px;
-    padding-top: 10px;
+    width: 20px;
     border: none;
     background-color: #fff;
     cursor: pointer;
 }
-.search button img{ 
-    width: 100%;
+.search img{
+   width: 100%;
+   vertical-align: middle;
 }
-.main-nav-bar{
-    display: flex;
-    align-items: top;
-    height: 100px;
-    justify-content: space-evenly;
-    /* background-color: red; */
-}
-.main-nav-bar img{
-    width: 150px;
-}
-.main-nav-bar nav{
-    flex-grow: 1;
-}
-.main-nav-bar-links{
-    display: flex;
-    /* justify-content: space-evenly; */
-    margin-top: 20px; 
-    flex-grow: 1;
-}
-.main-nav-bar>h1{
-    margin-top: 15px;
-}
-.main-nav-bar-links a{
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
+.log-in{
     font-size: 20px;
-    margin-left: 50px;
+    padding: 5px;
+    color: #000;
+    text-decoration: none;
 }
-.main-nav-bar-links a:hover{
-    color: #ff3399;
-    text-shadow: 1px 1px 5px rgba(0,0,0,0.03);
-}    
+.log-in:hover{
+   text-decoration: underline;
+   text-underline-offset: 5px;  
+}
+.sign-up{
+    background-color: #ff1088;
+    padding: 5px;
+    color: #fff;
+    font-size: 20px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+.search{
+    font-size: 0;
+    margin: 0px 5px;
+}
+.search input{
+    width: 30%;
+    height: 25px;
+    border: none;
+    padding:3px 0 0 10px;
+    border-radius: 5px;
+}
 /* 機器人購物車 */
 .side-service{
     position: fixed;
@@ -104,10 +82,12 @@ header{
 }
 .speaking-box{
     width:190px;
-    animation: hidden 10s ;
 }
 .close{
     cursor: pointer;
+}
+.close-box{
+    display: none;
 }
 .speaking-box p{
    background-color: #fff;
@@ -133,7 +113,7 @@ header{
     right:0;
 }
 .side-service p span{
- color:#ff3399;
+    color:#ff3399;
 }
 .side-service button{
     border:none;
@@ -154,11 +134,11 @@ header{
 .price-btn a img{
     width: 100%;
 }
-.price .orignal{
+.price .original{
     font-size: 20px;
     font-style: italic;
 }
-.price .orignal>span{
+.price .original>span{
     text-decoration: line-through;
 }
 .price .sale{
@@ -167,45 +147,138 @@ header{
     margin: 20px 0px 30px 0px;
     font-weight: bold;
 }
- /* footer */
- footer{
+/* footer */
+footer{
     width: 1200px;
     margin: auto;
     background-color:#fff;
     padding-top: 200px;
     text-align: center;
-   }
-   .footer-links{
-       display: flex;
-       justify-content: space-evenly;
-       border-bottom: 2px solid grey;
-       padding-bottom: 20px;
-   }
-   .footer-links li>a{
-       text-decoration: none;
-       color: black;
-       font-weight: bold;
-       font-size: 25px;
-   }
-   .footer-links a:hover{
+}
+.footer-links{
+    display: flex;
+    justify-content: space-evenly;
+    border-bottom: 2px solid grey;
+    padding-bottom: 20px;
+}
+.footer-links li>a{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 25px;
+}
+.footer-links a:hover{
     color: #ff3399;
-    }   
-   .social-media{
-       display: flex;
-       justify-content: center;
-   }
-   .social-media img{
-       width:50px;
-       margin:20px 0px 0px 50px;
-   }
-   .footer-logo{
-       margin: auto;
-       width: 200px;
-       margin-top: 50px;
-   }
-   .footer-logo img{
-       width: 100%;
-   }
-   .current-page a{
+}   
+.social-media{
+    display: flex;
+    justify-content: center;
+}
+.social-media img{
+    width:50px;
+    margin:20px 0px 0px 50px;
+}
+.footer-logo{
+    margin: auto;
+    width: 200px;
+    margin-top: 50px;
+}
+.footer-logo img{
+    width: 100%;
+}
+.current-page a{
     color: #ff3399;
-   }
+}
+/* 手機板 */
+@media screen and (max-width:768px){
+    /* 導覽列 */
+    .main-nav-bar-background{
+        position: fixed;
+        z-index: 2;
+    }
+    .main-nav-bar .logo{
+        width: 20%;
+    }
+    .side-menu{
+        position: absolute;
+        top: 80%;
+        right: -80%;
+        width:80%;
+        height:80vh;
+        background-color: #888;
+        text-align: center;
+        transition: right 1s;
+        z-index: 3;
+    }
+    .main-nav-bar-links a{
+        display: block;
+        padding:20px 0;
+    }
+    .hb{
+        width: 40px;
+        height: 40px;
+        background-color: #000;
+        position:relative;
+        margin:0px 5px 0px 5px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    .hb span{
+        width: 25px;
+        height: 2px;
+        background-color: #fff;
+        position: absolute;
+        right: 0;
+        left: 0;
+        margin: auto;
+    }
+    .hb span:first-child{
+        transform: rotate(0deg);
+        top: 10px;
+    }
+    .hb span:last-child{
+        bottom: 10px;
+    }
+    .hb span:nth-child(2){
+        top: 0;
+        bottom: 0;
+    }
+    .hidemenu{
+        right: 0%;;
+        transition: 1s;
+    }
+    .member{
+        margin-left: auto;
+        font-size: 18px;
+    }
+    .search{
+        margin-top: 50px;
+        width: 100%;
+    }
+    .search button{
+        margin-left: -4%;
+    }
+}
+@media screen and (min-width:769px) {
+    .main-nav-bar-background{
+        position: absolute;
+    }
+    .side-menu{
+        display: flex;
+        width: 80%;
+    }
+    .main-nav-bar-links{
+        display: flex;
+        flex-grow: 1;
+    }
+    .search button{
+        margin-left: -5%;
+    }
+    .search{
+        text-align: end;
+        width:45%;
+    }
+    .hb{
+        display: none;
+    }
+}
