--- a/header css.css
+++ b/header css.css
@@ -1,15 +1,15 @@
 /* 主選單 */
-.header{
-    z-index: 1;
-}
 .main-nav-bar-background{
     width: 100%;
-    background: linear-gradient(rgba(256,256,256,1),transparent);
-    z-index: 1;
 }
 .main-nav-bar{
+    background: linear-gradient(rgba(256,256,256,1),transparent);
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    position: absolute;
+    z-index: 2;
+    width: 100%;
 }
 .main-nav-bar-links a{
     font-size: 25px;
