--- a/header css.css
+++ b/header css.css
@@ -258,7 +258,7 @@ footer{
         right: -80%;
         width:80%;
         height:80vh;
-        background-color: #888;
+        background-color: #dda975;
         text-align: center;
         transition: right 1s;
         z-index: 3;
